# cpu-microbenchmark

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
benchmarks/: CMakeLists.txt
benchmarks/openmp/: CMakeLists.txt  benchmarks.hpp  blacksholes.cpp  blacksholes_data.hpp  omp_benchmark.hpp  register_benchmarks.cpp  stream.cpp
benchmarks/single_thread/: CMakeLists.txt  benchmarks.hpp  register_benchmarks.cpp  single_thread_benchmark.hpp  stream.cpp
include/cpu-microbenchmark/: allocator.hpp  benchmark.hpp  math.hpp  optimizations.hpp  registry.hpp  timer.hpp  utils.hpp
